--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "alrakib1",
   "license": "ISC",
@@ -14,7 +15,8 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
